.openshift/templates/deploy.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: https://github.com/abryson-redhat/gws-prometheus.git
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2021-05-06T15:07:57Z"
  generation: 10
  labels:
    app: gws-prometheus
    app.kubernetes.io/component: gws-prometheus
    app.kubernetes.io/instance: gws-prometheus
    app.kubernetes.io/part-of: gws-prometheus
  managedFields:
  - apiVersion: apps.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:app.openshift.io/vcs-ref: {}
          f:app.openshift.io/vcs-uri: {}
          f:openshift.io/generated-by: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/part-of: {}
      f:spec:
        f:replicas: {}
        f:selector:
          .: {}
          f:app: {}
          f:deploymentconfig: {}
        f:strategy:
          f:activeDeadlineSeconds: {}
          f:rollingParams:
            .: {}
            f:intervalSeconds: {}
            f:maxSurge: {}
            f:maxUnavailable: {}
            f:timeoutSeconds: {}
            f:updatePeriodSeconds: {}
          f:type: {}
        f:template:
          .: {}
          f:metadata:
            .: {}
            f:creationTimestamp: {}
            f:labels:
              .: {}
              f:app: {}
              f:deploymentconfig: {}
          f:spec:
            .: {}
            f:containers:
              .: {}
              k:{"name":"gws-prometheus"}:
                .: {}
                f:imagePullPolicy: {}
                f:name: {}
                f:resources: {}
                f:terminationMessagePath: {}
                f:terminationMessagePolicy: {}
                f:volumeMounts:
                  .: {}
                  k:{"mountPath":"/prometheus/prometheus.yml"}:
                    .: {}
                    f:mountPath: {}
                    f:name: {}
                    f:subPath: {}
            f:dnsPolicy: {}
            f:restartPolicy: {}
            f:schedulerName: {}
            f:securityContext: {}
            f:terminationGracePeriodSeconds: {}
            f:volumes:
              .: {}
              k:{"name":"config-volume"}:
                .: {}
                f:configMap:
                  .: {}
                  f:defaultMode: {}
                  f:name: {}
                f:name: {}
    manager: Mozilla
    operation: Update
    time: "2021-05-06T15:18:24Z"
  - apiVersion: apps.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:template:
          f:spec:
            f:containers:
              k:{"name":"gws-prometheus"}:
                f:image: {}
        f:triggers: {}
      f:status:
        f:availableReplicas: {}
        f:conditions:
          .: {}
          k:{"type":"Available"}:
            .: {}
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:status: {}
            f:type: {}
          k:{"type":"Progressing"}:
            .: {}
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
        f:details:
          .: {}
          f:causes: {}
          f:message: {}
        f:latestVersion: {}
        f:observedGeneration: {}
        f:readyReplicas: {}
        f:replicas: {}
        f:unavailableReplicas: {}
        f:updatedReplicas: {}
    manager: openshift-controller-manager
    operation: Update
    time: "2021-05-06T15:32:04Z"
  name: gws-prometheus
  namespace: gws-prometheus
  resourceVersion: "1274279"
  selfLink: /apis/apps.openshift.io/v1/namespaces/gws-prometheus/deploymentconfigs/gws-prometheus
  uid: 90b94efb-5194-4eec-95a6-f763e76ff401
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: gws-prometheus
    deploymentconfig: gws-prometheus
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gws-prometheus
        deploymentconfig: gws-prometheus
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/gws-prometheus/gws-prometheus@sha256:5d6b3b3dc792f21f5dc2aade4cde2aee33353c2d777077782a85d9b3d9c24667
        imagePullPolicy: Always
        name: gws-prometheus
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /prometheus/prometheus.yml
          name: config-volume
          subPath: prometheus.yml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: prometheus-config
        name: config-volume
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - gws-prometheus
      from:
        kind: ImageStreamTag
        name: gws-prometheus:latest
        namespace: gws-prometheus
      lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/gws-prometheus/gws-prometheus@sha256:5d6b3b3dc792f21f5dc2aade4cde2aee33353c2d777077782a85d9b3d9c24667
    type: ImageChange
  - type: ConfigChange
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-05-06T15:08:54Z"
    lastUpdateTime: "2021-05-06T15:08:54Z"
    message: Deployment config has minimum availability.
    status: "True"
    type: Available
  - lastTransitionTime: "2021-05-06T15:32:01Z"
    lastUpdateTime: "2021-05-06T15:32:04Z"
    message: replication controller "gws-prometheus-9" successfully rolled out
    reason: NewReplicationControllerAvailable
    status: "True"
    type: Progressing
  details:
    causes:
    - type: Manual
    message: manual change
  latestVersion: 9
  observedGeneration: 10
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
