.openshift/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2021-05-06T15:07:57Z"
  labels:
    app: gws-prometheus
    app.kubernetes.io/component: gws-prometheus
    app.kubernetes.io/instance: gws-prometheus
    app.kubernetes.io/part-of: gws-prometheus
  managedFields:
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:ingress: {}
    manager: openshift-router
    operation: Update
    time: "2021-05-06T15:07:57Z"
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/part-of: {}
      f:spec:
        f:port:
          .: {}
          f:targetPort: {}
        f:to:
          f:kind: {}
          f:name: {}
          f:weight: {}
        f:wildcardPolicy: {}
    manager: Mozilla
    operation: Update
    time: "2021-05-06T15:21:41Z"
  name: gws-prometheus
  namespace: gws-prometheus
  resourceVersion: "1271117"
  selfLink: /apis/route.openshift.io/v1/namespaces/gws-prometheus/routes/gws-prometheus
  uid: aacae85d-2823-4912-afc0-3e6fd76e1e31
spec:
  host: gws-prometheus-gws-prometheus.apps.cluster-e4eb.e4eb.sandbox539.opentlc.com
  port:
    targetPort: 9090-tcp
  to:
    kind: Service
    name: gws-prometheus
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2021-05-06T15:07:57Z"
      status: "True"
      type: Admitted
    host: gws-prometheus-gws-prometheus.apps.cluster-e4eb.e4eb.sandbox539.opentlc.com
    routerCanonicalHostname: apps.cluster-e4eb.e4eb.sandbox539.opentlc.com
    routerName: default
    wildcardPolicy: None
